--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,9 @@
-
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+SESSION_SECRET=""
+PG_USER="postgres"
+PG_HOST="localhost"
+PG_DATABASE="secrets"
+PG_PASSWORD=""
+PG_PORT="5432"
+GITHUB_TOKEN="" 
